--- a/ax-select/demo/index.html
+++ b/ax-select/demo/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en-GB">
+  <script type="module" src="form.js"></script>
 <head>
   <meta charset="utf-8">
   <style>
@@ -9,21 +10,6 @@
   </style>
 </head>
 <body>
-  <div id="demo"></div>
-
-  <script type="module">
-    import { html, render } from 'lit-html';
-    import '../ax-select.js';
-
-    const title = 'Hello owc World!';
-    render(
-      html`
-        <ax-select .title=${title}>
-          some more light-dom
-        </ax-select>
-      `,
-      document.querySelector('#demo')
-    );
-  </script>
+  <ax-form></ax-form>
 </body>
 </html>
